# mmpd

./: Cargo.toml  LICENSE  README.md  testcfg.yml
docs/: config.md
midi-macro-pad-bin/: Cargo.toml
midi-macro-pad-bin/src/: cli.yml  init.rs  main.rs
midi-macro-pad-bin/src/init/: midi_setup.rs
midi-macro-pad-bin/src/tasks/: task_list_midi_devices.rs  task_main.rs  task_monitor.rs
mmpd-bin/: Cargo.toml
mmpd-bin/src/: init.rs  main.rs  tasks.rs  template-config.yml
mmpd-bin/src/init/: midi_setup.rs
mmpd-bin/src/tasks/: task_list_midi_devices.rs  task_main.rs  task_monitor.rs
mmpd-lib/: Cargo.toml
mmpd-lib/src/: expressions.rs  focus.rs  keyboard_control.rs  lib.rs  macros.rs  match_checker.rs  midi.rs  shell.rs  state.rs  variables.rs
mmpd-lib/src/config/: input_formats.rs  raw_config.rs
mmpd-lib/src/config/versions/: version1.rs
mmpd-lib/src/config/versions/version1/: actions.rs  event_matchers.rs  macros.rs  precondition.rs  primitive_matchers.rs  scope.rs
mmpd-lib/src/expressions/: functions.rs
mmpd-lib/src/focus/: adapters.rs  mac_os.rs  windows.rs  x11.rs
mmpd-lib/src/focus/adapters/: x11.rs
mmpd-lib/src/focus/adapters/x11/: x11_sys.rs  xdo_sys.rs
mmpd-lib/src/focus/mac_os/: get_window_info.scpt
mmpd-lib/src/focus/x11/: x11_sys.rs
mmpd-lib/src/keyboard_control/: adapters.rs  mac_os.rs  windows.rs  xdo.rs
mmpd-lib/src/keyboard_control/adapters/: xdo.rs
mmpd-lib/src/macros/: actions.rs  event_matching.rs  preconditions.rs
mmpd-lib/src/macros/event_matching/: midi.rs
mmpd-lib/src/macros/preconditions/: midi.rs
mmpd-lib/src/midi/: adapters.rs
mmpd-lib/src/midi/adapters/: midir.rs
mmpd-lib/src/state/: midi_state.rs
mmpd-lib/src/variables/: functions.rs
src/: main.rs
(+47 files in other folders)
