[package]
name = "midi-macro-pad-bin"
version = "0.1.0"
authors = ["Michael Duerinckx <mich@michd.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxdo = "^0.6"
midi-macro-pad-lib = { path = "../midi-macro-pad-lib" }
midir = "^0.7.0"
