[package]
name = "midi-macro-pad-bin"
version = "0.1.0"
authors = ["Michael Duerinckx <mich@michd.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmpd-lib = { path = "../mmpd-lib" }
clap = {version = "~2.33.3", features = ["yaml"]}
directories = "3.0.1"
