[package]
name = "mmpd-lib"
version = "0.1.0"
authors = ["Michael Duerinckx <mich@michd.me>"]
edition = "2018"

[dependencies]
midir = "^0.7.0"
libxdo-sys = "^0.11"
x11 = { version = "2.18.2", features = ["xlib"] }
libxdo = "^0.6"
regex = "1"
yaml-rust = "0.4"
linked-hash-map = "0.5.4"

[dev-dependencies]
mockall = "0.9.1"
