[package]
name = "mmpd-lib"
version = "0.1.0"
authors = ["Michael Duerinckx <mich@michd.me>"]
edition = "2018"

[dependencies]
midir = "^0.7.0"
regex = "1"
yaml-rust = "0.4"
linked-hash-map = "0.5.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }
libxdo-sys = "^0.11"
libxdo = "^0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows_bindings = { path = "../windows_bindings" }
winapi = { version = "0.3.9", features = [] }

# TODO: Mac OS dependencies

[dev-dependencies]
mockall = "0.9.1"
